<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sin_logo" >


    <ImageView
        android:id="@+id/logoSeekIt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="70dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo3" />

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthTitle.AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/subtitle" >

        <EditText
            android:id="@+id/registroUsernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint" />
        <requestFocus />

        <EditText
            android:id="@+id/registroNameField"
            style="@style/AuthEditText"
            android:hint="@string/name_hint"/>

        <EditText
            android:id="@+id/registroPasswordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/registroPasswordFieldConfirm"
            style="@style/AuthEditText"
            android:hint="@string/password_hint_confirm"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registroEmailFieldRegister"
            style="@style/AuthEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:src="@drawable/button_divider_grey"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signupButton"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:onClick="registrar"
        android:text="@string/sign_up_button_label" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:onClick="cancelar"
        android:text="@string/cancel_button_label" />

</RelativeLayout>